--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,16 @@ allprojects {
 subprojects {
     apply plugin: 'java'
 
+
     repositories {
         mavenCentral()
     }
 
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.11'
+        compile 'mysql:mysql-connector-java:5.1.34'
+        compile 'jstl:jstl:1.2'
+
     }
 }
 
