--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,9 +4,19 @@ buildscript {
     repositories {
         mavenCentral()
     }
+    dependencies{
+        classpath 'org.flywaydb:flyway-gradle-plugin:3.2.1'
+    }
 }
 
 dependencies {
     testCompile 'junit:junit:4.10'
+}
+
+flyway{
+    url = 'jdbc:mysql://localhost:3306/javaee_usr_info'
+    user = 'root'
+    password = ''
+    baselineOnMigrate = true
 }
 
