--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,9 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version: '4.11'
         compile 'mysql:mysql-connector-java:5.1.34'
         compile 'jstl:jstl:1.2'
-
+        compile "org.hibernate:hibernate-core:4.3.10.Final"
     }
+
 }
 
 task wrapper(type: Wrapper) {
