--- a/core/build.gradle
+++ b/core/build.gradle
@@ -20,6 +20,7 @@ flyway {
     url = 'jdbc:mysql://localhost:3306/javaee_usr_info'
     user = 'root'
     password = ''
+    driver = 'com.mysql.jdbc.Driver'
     baselineOnMigrate = true
 }
 
