--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 
 dependencies {
     testCompile 'junit:junit:4.10'
+    compile 'org.hibernate:hibernate-core:5.0.0.CR2'
+//    compile 'org.hibernate:hibernate-core:4.3.10.Final'
 }
 
 apply plugin: 'org.flywaydb.flyway'
