--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,9 +12,10 @@ buildscript {
 
 dependencies {
     testCompile 'junit:junit:4.10'
-//    compile 'org.hibernate:hibernate-core:5.0.0.CR2'
-     compile 'org.hibernate:hibernate-core:4.3.10.Final'
-     compile 'mysql:mysql-connector-java:5.1.34'
+    compile 'org.hibernate:hibernate-core:4.3.10.Final'
+    compile 'mysql:mysql-connector-java:5.1.34'
+    compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+
 
 }
 
