--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" version="2.4"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http:/java.sun.com/dtd/web-app_2_3.dtd">
+
     <servlet>
         <servlet-name>UserServlet</servlet-name>
         <servlet-class>com.tw.web.UsrServlet</servlet-class>
@@ -13,41 +14,16 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>UserServlet</servlet-name>
-        <url-pattern>/insertUsr</url-pattern>
-    </servlet-mapping>
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/spring-core-config.xml</param-value>
+    </context-param>
 
-    <servlet>
-        <servlet-name>DeleteServlet</servlet-name>
-        <servlet-class>com.tw.web.DeleteServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>DeleteServlet</servlet-name>
-        <url-pattern>/deleteUsr</url-pattern>
-    </servlet-mapping>
-
-
-    <servlet>
-        <servlet-name>UpdateServlet</servlet-name>
-        <servlet-class>com.tw.web.UpdateServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>UpdateServlet</servlet-name>
-        <url-pattern>/updateUsr</url-pattern>
-    </servlet-mapping>
-
-    <!--<servlet>-->
-        <!--<servlet-name>InsertServlet</servlet-name>-->
-        <!--<servlet-class>com.tw.web.InsertServlet</servlet-class>-->
-    <!--</servlet>-->
-
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>InsertServlet</servlet-name>-->
-        <!--<url-pattern>/</url-pattern>-->
-    <!--</servlet-mapping>-->
 
 </web-app>
