--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,8 +15,8 @@ dependencies {
     compile 'org.hibernate:hibernate-core:4.3.10.Final'
     compile 'mysql:mysql-connector-java:5.1.34'
     compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
-
-
+    compile 'org.springframework:spring-core:4.1.7.RELEASE'
+    compile 'org.springframework:spring-web:4.1.7.RELEASE'
 }
 
 //apply plugin: 'org.flywaydb.flyway'
