--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -1,29 +1,66 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee" version="2.4"
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http:/java.sun.com/dtd/web-app_2_3.dtd">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+         version="2.4">
 
     <servlet>
-        <servlet-name>UserServlet</servlet-name>
-        <servlet-class>com.tw.web.UsrServlet</servlet-class>
+        <servlet-name>spring-web</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/spring-web-servlet.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>UserServlet</servlet-name>
+        <servlet-name>spring-web</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <listener>
-        <listener-class>
-            org.springframework.web.context.ContextLoaderListener
-        </listener-class>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring-core-config.xml</param-value>
+        <param-value>/WEB-INF/spring-web-servlet.xml</param-value>
     </context-param>
-
-
 </web-app>
+
+        <!--<?xml version="1.0" encoding="ISO-8859-1"?>-->
+<!--<web-app id="WebApp_ID" version="2.4"-->
+         <!--xmlns="http://java.sun.com/xml/ns/j2ee"-->
+         <!--xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
+         <!--xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee-->
+    <!--http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">-->
+
+    <!--<display-name>Spring MVC Application</display-name>-->
+
+    <!--<servlet>-->
+        <!--<servlet-name>spring-web-servlet</servlet-name>-->
+        <!--<servlet-class>-->
+            <!--org.springframework.web.servlet.DispatcherServlet-->
+        <!--</servlet-class>-->
+        <!--<load-on-startup>1</load-on-startup>-->
+    <!--</servlet>-->
+
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>spring-web-servlet</servlet-name>-->
+        <!--<url-pattern>/</url-pattern>-->
+    <!--</servlet-mapping>-->
+
+    <!--<context-param>-->
+        <!--<param-name>contextConfigLocation</param-name>-->
+        <!--<param-value>/WEB-INF/spring-web-servlet.xml</param-value>-->
+    <!--</context-param>-->
+
+    <!--<listener>-->
+        <!--<listener-class>-->
+            <!--org.springframework.web.context.ContextLoaderListener-->
+        <!--</listener-class>-->
+    <!--</listener>-->
+
+<!--</web-app>-->
+
