--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
     compile 'org.springframework:spring-core:4.1.7.RELEASE'
     compile 'org.springframework:spring-web:4.1.7.RELEASE'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
 }
 
 //apply plugin: 'org.flywaydb.flyway'
