--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version: '4.11'
 
         compile 'jstl:jstl:1.2'
+        compile 'com.google.code.gson:gson:2.3.1'
 
     }
 
